--- a/src/index.html
+++ b/src/index.html
@@ -1,9 +1,10 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <meta name="description" content="Events">
-  <meta name="keywords" content="Angular, PWA">
+  <meta name="keywords" content="Events">
 
   <title>Events</title>
   <base href="/">
@@ -11,10 +12,21 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="manifest" href="manifest.json">
-  <meta name="theme-color" content="#1976d2">
+  <meta name="theme-color" content="#12ff12">
+
+  <style>
+    body {
+      scrollbar-width: none;
+    }
+    body::-webkit-scrollbar {
+      display: none;
+    }
+  </style>
 </head>
+
 <body>
   <app-root></app-root>
   <noscript>JavaScript required to view site</noscript>
 </body>
+
 </html>
