--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,11 @@
   <meta name="theme-color" content="#12ff12">
 
   <style>
+    html {
+      margin: 0px;
+    }
     body {
+      margin: 0px;
       scrollbar-width: none;
     }
     body::-webkit-scrollbar {
