Update to show timer on first page, leaving a routing problem aside

--- a/src/index.html
+++ b/src/index.html
@@ -17,9 +17,12 @@
   <style>
     html {
       margin: 0px;
+      min-height: 100%;
     }
     body {
       margin: 0px;
+      height: 100%;
+      min-height: 100%;
       scrollbar-width: none;
     }
     body::-webkit-scrollbar {
