Update several styles.

--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,11 @@
       height: 100%;
       min-height: 100%;
       scrollbar-width: none;
+
+      background-color: dimgray;
+      /* max-width: 960px;
+      margin-right: auto;
+      margin-left: auto */
     }
     body::-webkit-scrollbar {
       display: none;
