--- a/src/bof/index.html
+++ b/src/bof/index.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <title>Pageflip</title>
-  <link rel="stylesheet" href="styles.css">
-  <script src="jquery.min.js"></script>
-  <script src="TweenMax.min.js"></script>
+  <link rel="stylesheet" href="css/flip.css">
+  <script src="js/jquery.min.js"></script>
+  <script src="js/TweenMax.min.js"></script>
 </head>
 
 <body>
@@ -22,7 +22,7 @@
  -->
       </div>
       <div class="page-content" id="new-content">
-        <iframe src="../"></iframe>
+        <iframe src="https://hjtappe.github.io/iccm-eu-2020/#/#eventList"></iframe>
         <!-- 
 				<p>
 					<strong>3D</strong> Page Flip<br> <em>Now with support
@@ -33,6 +33,6 @@
     </div>
   </div>
 </body>
-<script src="functions.js"></script>
+<script src="js/flip-functions.js"></script>
 
 </html>
