--- a/bof/flip.html
+++ b/bof/flip.html
@@ -13,7 +13,7 @@
   <div class="site">
     <div class="container">
       <div class="page-content" id="old-content">
-        <iframe src="http://bof.iccm-europe.org/projector"></iframe>
+        <iframe src="http://bof.iccmeurope.org/projector"></iframe>
         <!-- 
 				<p>
 					<strong>3D</strong> Page Flip<br> <em>Now with support
@@ -22,7 +22,7 @@
  -->
       </div>
       <div class="page-content" id="new-content">
-        <iframe src="https://hjtappe.github.io/iccm-eu-2020/#/#eventList"></iframe>
+        <iframe src="https://iccm-eu.github.io/iccm-eu-schedule/2021/#/"></iframe>
         <!-- 
 				<p>
 					<strong>3D</strong> Page Flip<br> <em>Now with support
