--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,9 @@
 
 <head>
   <meta charset="utf-8">
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline' fonts.gstatic.com fonts.googleapis.com; font-src fonts.gstatic.com">
+  <meta http-equiv="X-Content-Security-Policy" content="default-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline' fonts.gstatic.com fonts.googleapis.com; font-src fonts.gstatic.com">
+  <meta http-equiv="X-WebKit-CSP" content="default-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline' fonts.gstatic.com fonts.googleapis.com; font-src fonts.gstatic.com">
   <meta name="description" content="Events">
   <meta name="keywords" content="Events">
 
